--- a/src/app/greeting/greeting.component.html
+++ b/src/app/greeting/greeting.component.html
@@ -1,7 +1,10 @@
-<div>task 1
-<p>{{ quote }}</p>
-</div>
-<hr>
-<div>task 2
-<p>Welcome, {{ name }}!</p>
-</div>
+<fieldset>
+    <legend>TASK 1</legend>
+    <p>{{ quote }}</p>
+</fieldset>
+<fieldset>
+    <legend>TASK 2</legend>
+    <p>Welcome, {{ name }}!</p>
+</fieldset>
+
+
