--- a/src/app/item-list/item-list.component.html
+++ b/src/app/item-list/item-list.component.html
@@ -1,1 +1,7 @@
-<p>item-list works!</p>
+<div class="user-profile">
+    <ul>
+        <li><i>nickname: </i>{{ nickname }}</li>
+        <li><i>pass: </i>{{ pass }}</li>
+    </ul>
+</div>
+
