--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,6 @@
-/* You can add global styles to this file, and also import other style files */
+fieldset {
+    width: 80vw;
+    margin: 10px auto;
+    border-radius: 5px;
+    box-shadow: 2px 2px 5px gainsboro;
+}
